# pixel-sum

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: pixel_sum.h
sources/: pixel_sum.cpp
test/: pixel_average_test.cpp  pixel_non_zero_avg_test.cpp  pixel_non_zero_count_test.cpp  pixel_sum_base_test.cpp  pixel_sum_benchmarks.cpp  pixel_sum_test.cpp  support_functions.cpp  support_functions.h
